assets/css/navigator.css
/* ... */
.dataSource {
  text-align: center;
  line-height: 0.8em;
}

.dataSource > a > img {
  height:105px;
}

.dataSource > p {
  margin-top:10px;
}

.dataSource > .text-muted {
  line-height: 0.3em;
  font-size: 0.8em;
}

.mugshot {
  text-align: center;
  line-height: 0.8em;
}

.mugshot > a > img {
  height:155px;
  border-radius: 155px;
}

.mugshot > p {
  margin-top:10px;
}

.mugshot > .text-muted {
  line-height: 1.2em;
}

#downloadModalHeader {
  border-bottom: 0;
}

.downloadTab {
  font-size: 1.35em !important;
}

.downloadTab > a > i {
  margin-right: 6px;
}

#downloadModalContent {
  margin-top: -40px;
}

#downloadOpts {
  padding:20px;
}

.downloadButton {
  float:right;
  margin:3px;
}

#licenseDownload {
  font-size: 0.8em;
}

.list-no-bullet {
  list-style-type:none;
  margin-left:-20px;
}

.occurrenceContainer {
  margin-left:-20px;
}

.phylum {
  font-size: 1.6em;
}

.class {
  font-size: 1.4em;
}

.family {
  font-size: 1.2em;
}

#taxaBrowserNavbar {
  display: none;
}
#getUrlNavbar {
  display: none;
}
@media(max-width: 1050px) {
  .examples>button> img {
    height: 60px;
  }
  .examples > button {
    padding:20px;
  }
  .mugshot > a > img {
    height:95px;
    border-radius: 150px;
  }
}
@media(max-width: 890px) {
  .examples>button> img {
    height: 50px;
  }
  .examples > button {
    padding: 15px;
  }
  .mugshot > a > img {
    height:80px;
    border-radius: 150px;
  }
}
@media(max-width: 800px) {
  .examples>button> img {
    height: 32px;
  }
  .examples > button {
    padding: 10px;
  }
  .dataSource > a > img {
    height:80px;
  }
}
@media(max-width: 700px) {
  .mapCtrl {
    display: none;
  }
  .timeScale {
    visibility: hidden;
  }
  .navbar-text.help {
    display: none;
  }
  .navbar-text {
    font-size: 1.3em;
    float:right;
    margin-right:10px;
  }
  #taxaBrowserNavbar {
    display: block;
  }
  #getUrlNavbar {
    display: block;
  }
  #downloadDataTab {
    display: none;
  }
  #downloadData {
    display: none;
  }
}
@media screen and (max-width: 580px) {
  #helpModalContent {
    box-shadow: none;
    -webkit-box-shadow:none;
    -moz-box-shadow:none;
  }
  .universalSearch {
    position: relative;
    padding-bottom: 15px;
    float:right;
  }
  .pull-right {
    clear:right;
    margin-right: 1em;
    line-height: 0;
  }
  .mugshot > a > img {
    height:105px;
    border-radius: 120px;
  }
}

